Make: Configuring GC threads